//
//  AppConstants.swift
//  Movie Finder
//
//  Created by Tarun Prajapati on 23/03/17.
//  Copyright © 2017 Tarun Prajapati. All rights reserved.
//

import Foundation
import UIKit


//MARK:- Colors
let THEME_COLOR = UIColor(sameRGB: 74)
let GOLDEN_COLOR = UIColor(red: 245, green: 166, blue: 35)
let YELLOW_COLOR = UIColor(red: 248, green: 231, blue: 28)
let LIGHT_GREY_COLOR = UIColor(sameRGB: 155)
let PAPER_COLOR = UIColor(sameRGB: 249)
let DARK_GREY_COLOR = UIColor(sameRGB: 74)
let MEDIUM_GREY_COLOR = UIColor(sameRGB: 111)
let TABLE_VIEW_BG_COLOR = UIColor(red: 231, green: 232, blue: 236)

//MARK:- Strings
let APP_NAME = "GENIUS\nMOVIE FINDER"
let ENTER_MOVIE_NAME = "Enter movie or series name"
let POWERED_BY_OMDb = "Powered by OMDb" 
let WHAT_ARE_YOU_LOOKING_FOR = "What are you looking for?"
let NA = "N/A"
let SEASON_DETAILS_NOT_FOUND_ERROR = "Could not find episodes. Try again!"
let ERROR_TRY_AGAIN_LATER = "Error! Please Try again!"

//MARK:- Image Names
let GENIUS_ICON = "genius_icon"
let SEARCH_ICON = "search_icon"
let STAR_ICON = "star"


//MARK:- OMDb API
let OMDb_BASE_URL = "https://www.omdbapi.com/?"
let OMDb_REQUEST_PARAM_ID = "i"
let OMDb_REQUEST_PARAM_TITLE = "t"
let OMDb_REQUEST_PARAM_TYPE = "type"
let OMDb_REQUEST_PARAM_SEASON = "Season"
let OMDb_REQUEST_PARAM_EPISODE = "Episode"
let OMDb_REQUEST_PARAM_PAGE = "page"
let OMDb_REQUEST_PARAM_SEARCH = "s"

let OMDb_RESPONSE_TITLE = "Title"
let OMDb_RESPONSE_GENRE = "Genre"
let OMDb_RESPONSE_RELEASED = "Released"
let OMDb_RESPONSE_PLOT = "Plot"
let OMDb_RESPONSE_IMDBRATING = "imdbRating"
let OMDb_RESPONSE_IMDBVOTES = "imdbVotes"
let OMDb_RESPONSE_POSTER = "Poster"
let OMDb_RESPONSE_TOTALSEASONS = "totalSeasons"
let OMDb_RESPONSE_RESPONSE = "Response"
let OMDb_RESPONSE_EPISODES = "Episodes"
let OMDb_RESPONSE_SEASON = "Season"
let OMDb_RESPONSE_EPISODE = "Episode"
let OMDb_RESPONSE_RUNTIME = "Runtime"
let OMDb_RESPONSE_ID = "imdbID"
let OMDb_RESPONSE_TOTALRESULTS = "totalResults"
let OMDb_RESPONSE_SEARCH = "Search"
let OMDb_RESPONSE_TYPE = "Type"
let OMDb_RESPONSE_YEAR = "Year"
