//
//  MotionPicture.swift
//  Movie Finder
//
//  Created by Tarun Prajapati on 23/03/17.
//  Copyright © 2017 Tarun Prajapati. All rights reserved.
//

import Foundation


enum MotionPictureType: String{
    case Movie = "Movie"
    case Series = "Series"
}
