...
        self.navigationController?.delegate = self
        self.view.backgroundColor = PAPER_COLOR
    }

    
    override func viewWillAppear(animated: Bool) {
        self.navigationItem.title = "Details"
    }
    

    private func startingPoint(){
        
        
...
