...
        super.viewDidLoad()

        self.startingPoint()
    }

    override func viewWillAppear(animated: Bool) {
        self.navigationItem.title = "Seasons"
        
    }
    
    private func startingPoint(){
    
        //Setup tableView
...
